FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)

BISON_TARGET(PARSER parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c)
FLEX_TARGET(SCANNER lexer.l  ${CMAKE_CURRENT_BINARY_DIR}/lexer.c)
ADD_FLEX_BISON_DEPENDENCY(SCANNER PARSER)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB SOURCE_FILES *.c)
ADD_EXECUTABLE(flout ${SOURCE_FILES} ${FLEX_SCANNER_OUTPUTS} ${BISON_PARSER_OUTPUTS})
TARGET_LINK_LIBRARIES(flout linenoise)
INSTALL_TARGETS(/bin flout)
